# sim-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  simu.txt
include/: Sim.h  matrix.h  model.h
src/: RK4.c  main.c  matrix.c  model.c  test.c
